<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical" android:paddingStart="@dimen/padding" android:paddingEnd="@dimen/padding">


    <TextView
            android:text="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/name_text" tools:text="Harshad Raut"
            android:textAlignment="center"
            style="@style/NameStyle"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/nickname_edit" style="@style/NameStyle" android:hint="@string/what_is_ur_nickname"/>
    <Button
            android:text="@string/done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/done_button"
    style="@style/Widget.AppCompat.Button.Colored"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="@dimen/layout_margin"
    />
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/nickname_text" style="@style/NameStyle"/>
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/btn_star_big_on"
            android:id="@+id/imageView" android:contentDescription="@string/yello_star" tools:layout_marginTop="16dp"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/bio_text" style="@style/NameStyle"
                android:lineSpacingMultiplier="1.2"/>

    </ScrollView>

</LinearLayout>
</layout>